[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
lto = true

[workspace]
members = ["bfffs-core", "bfffs-fio", "bfffs", "isa-l"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1.0"
divbuf = { version = "0.4.0", features = ["experimental"] }
enum_dispatch = "0.3.12"
assert_cmd = "2.1.0"
atomic_enum = "0.3.0"
auto_enums = "0.8.5"
bitfield = "0.13.1"
byteorder = "1.4.0"
bytes = "1.5.0"
byteshuffle = "0.1.0"
clap = "4.1"
console-subscriber = { version = "0.4.0", default-features = false }
criterion = "0.5"
dashmap = "5.5"
downcast = "0.11.0"
enum-primitive-derive = "0.3.0"
fixedbitset = { version = "0.4.0", default-features = false }
freebsd-libgeom = "0.2.2"
function_name = "0.3.0"
fuse3 = { version = "0.8.1", default-features = false }
futures = "0.3.31"
futures-locks = "0.7.0"
futures-test = "0.3.31"
glob = "0.3.1"
hexdump = "0.1.2"
histogram = "0.6"
itertools = "0.13.0"
lalrpop = { version = "0.22.0", default-features = false, features = ["lexer"] }
lalrpop-util = { version = "0.22.0",default-features = false }
libc = "0.2.176"
lz4_flex = { version = "0.12", default-features = false, features = [ "std", "checked-decode"] }
mdconfig = "0.2.0"
metrohash = "1.0.2"
mockall = "0.14.0"
mockall_double = "0.3.1"
nix = { version = "0.29.0", default-features = false }
nonzero_ext = "0.3.0"
num-traits = "0.2.14"
num_cpus = "1.8"
num_enum = "0.7.0"
permutohedron = "0.2"
pin-project = "1.1.0"
predicates = "3.0.1"
pretty_assertions = "1.4"
prettydiff = { version = "0.7.0", default-features = false }
prettytable-rs = { version = "0.10.0", default-features = false }
rand = "0.8.5"
rand_xorshift = "0.3"
regex = "1.7.3"
rstest = "0.19.0"
rstest_reuse = "0.6.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_yaml_ng = "0.10.0"
si-scale = "0.1.5"
speedy = "0.8.7"
sysctl = "0.5"
tabular = "0.2.0"
tempfile = "3.8"
test-log = { version = "0.2.13", default-features = false }
thiserror = "1.0.32"
time = { version = "0.3.0", default-features = false }
tokio = { version = "1.39.1", default-features = false }
tokio-file = "0.11.0"
tokio-seqpacket = "0.8.1"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.20", default-features = false }
uuid = { version = "1.6.1", default-features = false }
zstd = "0.13.0"

[patch.crates-io]
atomic_enum = { git = "https://github.com/brain0/atomic_enum.git", rev = "baea45a" }
