[package]
name = "bfffs-core"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"

[lib]
# BFFFS doesn't use doctests, because it's not a real library.
doctest = false

[features]
nightly = [ "mockall/nightly" ]

[dependencies]
async-trait = "0.1.40"
bincode = { version = "1.0.1", features = ["i128"] }
bitfield = "0.13.1"
blosc = "0.1.3"
byteorder = "1.2.3"
cfg-if = "1.0"
divbuf = { git = "https://github.com/asomers/divbuf.git", rev = "0a72fb5"}
downcast = "0.11.0"
enum-primitive-derive = "0.2.2"
fixedbitset = "0.4.0"
futures = "0.3.0"
futures-locks = "0.7.0"
itertools = "0.10.0"
hexdump = "0.1.1"
isa-l = { path = "../isa-l" }
lazy_static = "1.0"
libc = "0.2.105"
metrohash = "1.0"
mockall_double = "0.2.0"
nix = { version = "0.26.1", default-features = false, features = ["fs", "ioctl", "mount", "time"] }
num_enum = "0.5.1"
num-traits = "0.2.0"
pin-project = "1.0.11"
serde = "1.0.60"
serde_derive = "1.0"
serde_yaml = "0.8.16"
time = { version = "0.3.0", features = [ "formatting" ] }
tokio = { version = "1.24.2", features = ["rt", "sync", "time"] }
tokio-file = { git = "http://github.com/asomers/tokio-file", rev = "8ab925f" }
tracing = "0.1.5"
tracing-futures = "0.2.4"
uuid = { version = "0.8.2", features = ["serde", "v4"]}

[dev-dependencies.clap]
version = "3.0.14"
default-features = true
features=  [ "derive", "wrap_help" ]

[dev-dependencies]
dashmap = "5"
criterion = "0.4"
futures-test = "0.3.7"
glob = "0.3"
histogram = "0.6"
itertools = "0.10.0"
mockall = "0.11.2"
nix = { version = "0.26.1", default-features = false, features = ["user"] }
num_cpus = "1"
permutohedron = "0.2"
pretty_assertions = "1.3"
rand = "0.8"
rand_xorshift = "0.3"
rstest = "0.16.0"
rstest_reuse = "0.2.0"
tempfile = "3.2"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[build-dependencies]
nix = {  version = "0.26.1", default-features = false, features = ["feature"] }


[[test]]
name = "cacheable_space"
harness = false
path = "tests/cacheable_space.rs"

[[test]]
name = "functional"
path = "tests/functional/mod.rs"

[[bench]]
name = "serde"
harness = false
