[package]
name = "bfffs-core"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"

[lib]
# BFFFS doesn't use doctests, because it's not a real library.
doctest = false

[features]
nightly = [ "mockall/nightly" ]

[dependencies]
atomic_enum = { workspace = true }
auto_enums = { workspace = true }
bincode = { workspace = true, features = ["i128"] }
bitfield = { workspace = true }
blosc = { workspace = true }
byteorder = { workspace = true }
cfg-if.workspace = true
divbuf.workspace = true
downcast = { workspace = true }
enum_dispatch.workspace = true
enum-primitive-derive = { workspace = true }
fixedbitset = { workspace = true }
futures = { workspace = true }
futures-locks = { workspace = true }
itertools = { workspace = true }
hexdump = { workspace = true }
isa-l = { path = "../isa-l" }
libc = { workspace = true }
metrohash = { workspace = true }
mockall_double = { workspace = true }
nix = { workspace = true, features = ["feature", "fs", "ioctl", "mount", "time"] }
num_enum = { workspace = true }
num-traits = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-file = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
uuid = { workspace = true, features = ["v4", "std"] }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
dashmap = { workspace = true }
criterion = { workspace = true }
function_name = { workspace = true }
futures-test = { workspace = true }
glob = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
mdconfig = { workspace = true }
mockall = { workspace = true }
nonzero_ext = { workspace = true }
nix = { workspace = true, features = ["user"] }
num_cpus = { workspace = true }
permutohedron = { workspace = true }
pretty_assertions = { workspace = true }
prettydiff = { workspace = true, features = ["prettytable-rs"] }
rand = { workspace = true }
rand_xorshift = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "tracing-log"] }

[build-dependencies]
nix = { workspace = true, features = ["feature"] }


[[test]]
name = "cacheable_space"
harness = false
path = "tests/cacheable_space.rs"

[[test]]
name = "functional"
path = "tests/functional/mod.rs"

[[test]]
name = "torture"
path = "tests/torture/mod.rs"

[[bench]]
name = "serde"
harness = false
