[package]
name = "bfffs-fio"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"
# As a fio external ioengine, we must depend pretty intimately on fio's
# internals.  So this crate must be GPL-2 too.
license = "GPL-2.0"

[build-dependencies]
cc = "1.0"

[dependencies]
bfffs-core = { path = "../bfffs-core" }
futures = "0.3.0"
lazy_static = "1.0"
libc = "0.2.44"
memoffset = "0.8.0"
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[lib]
crate-type = ["cdylib"]
