[package]
name = "bfffs-fio"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"
# As a fio external ioengine, we must depend pretty intimately on fio's
# internals.  So this crate must be GPL-2 too.
license = "GPL-2.0"

[dependencies]
bfffs-core = { path = "../bfffs-core" }
console-subscriber = "0.2.0"
futures = "0.3.30"
libc = "0.2.155"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "sync", "time", "tracing"] }

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[lib]
crate-type = ["cdylib"]
