[package]
name = "bfffs-fio"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"
# As a fio external ioengine, we must depend pretty intimately on fio's
# internals.  So this crate must be GPL-2 too.
license = "GPL-2.0"

[dependencies]
bfffs-core = { path = "../bfffs-core" }
console-subscriber = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "tracing"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "tracing-log"] }

[lib]
crate-type = ["cdylib"]
