[package]
name = "bfffs"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"

[features]
default = ["fuse"]
fuse = ["fuse3"]

[[bin]]
name = "bfffsd"
required-features = ["fuse"]

[dependencies]
async-trait = "0.1.40"
bincode = "1.0.1"
bfffs-core = { path = "../bfffs-core" }
bytes = "1.0"
cfg-if = "1.0"
fuse3 = { version = "0.6.1", optional = true, features = ["tokio-runtime"] }
futures = "0.3.0"
lalrpop-util = "0.19.7"
libc = "0.2.44"
nix = { version = "0.26.1", default-features = false, features = ["user"] }
si-scale = "0.1.5"
tabular = "0.2.0"
time = { version = "0.3.0", features = [ "formatting" ] }
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-seqpacket = "0.5.4"
tracing = "0.1.5"

[dependencies.clap]
version = "4.0"
default-features = true
features=  [ "cargo", "derive", "wrap_help"]

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
assert_cmd = "2.0"
divbuf = { git = "https://github.com/asomers/divbuf.git", rev = "0a72fb5"}
freebsd-libgeom = "0.2.1"
function_name = "0.3.0"
mockall = "0.11.0"
nix = { version = "0.26.1", default-features = false, features = ["mount", "process", "signal", "user"] }
predicates = "3.0.0"
regex = "1.0"
rstest = "0.17.0"
sysctl = "0.5"
tempfile = "3.4"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[bench]]
name = "bfffs-bench"
path = "benches/bfffs-bench/mod.rs"
harness = false
