[package]
name = "bfffs"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"

[features]
default = ["fuse"]
fuse = ["fuse3"]

[[bin]]
name = "bfffsd"
required-features = ["fuse"]

[dependencies]
bincode = "1.0.1"
bfffs-core = { path = "../bfffs-core" }
bytes = "1.0"
cfg-if = "1.0"
console-subscriber = { default-features = false, version = "0.2.0" }
fuse3 = { version = "0.7.1", optional = true, features = ["tokio-runtime"], default-features = false }
futures = "0.3.0"
lalrpop-util = { version = "0.19.9", features = ["lexer", "std"] }
libc = "0.2.44"
nix = { version = "0.28.0", default-features = false, features = ["user"] }
prettytable = { version = "0.10.0", default-features = false }
si-scale = "0.1.5"
tabular = "0.2.0"
time = { version = "0.3.0", default-features = false }
tokio = { version = "1.24.2", features = ["rt-multi-thread"], default-features = false }
tokio-seqpacket = "0.5.4"
tracing = { default-features = false, version = "0.1.5" }

[dependencies.clap]
version = "4.0"
default-features = true
features=  [ "cargo", "derive", "wrap_help"]

[dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
assert_cmd = "2.0"
divbuf = { git = "https://github.com/asomers/divbuf.git", rev = "deb99e3"}
freebsd-libgeom = "0.2.2"
function_name = "0.3.0"
mockall = "0.12.0"
nix = { version = "0.28.0", default-features = false, features = ["mount", "process", "signal", "user"] }
predicates = "3.0.0"
pretty_assertions = "1.3"
regex = "1.0"
rstest = "0.17.0"
sysctl = "0.5"
tempfile = "3.8"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[bench]]
name = "bfffs-bench"
path = "benches/bfffs-bench/mod.rs"
harness = false
