[package]
name = "bfffs"
version = "0.1.0"
authors = ["Alan Somers <asomers@gmail.com>"]
edition = "2021"

[features]
default = ["fuse"]
fuse = ["fuse3"]

[[bin]]
name = "bfffsd"
required-features = ["fuse"]

[lints.clippy]
doc_overindented_list_items = "allow"

[dependencies]
bincode.workspace = true
bfffs-core = { path = "../bfffs-core" }
bytes = { workspace = true }
cfg-if.workspace = true
console-subscriber = { workspace = true }
fuse3 = { workspace = true, features = ["tokio-runtime"], optional = true }
futures = { workspace = true }
lalrpop-util = { workspace = true, features = ["lexer", "std"] }
libc = { workspace = true }
nix = { workspace = true, features = ["user"] }
prettytable-rs = { workspace = true }
si-scale = { workspace = true }
tabular = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-seqpacket = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "wrap_help"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "tracing-log"] }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
divbuf.workspace = true
enum_dispatch.workspace = true
freebsd-libgeom = { workspace = true }
function_name = { workspace = true }
mockall = { workspace = true }
nix = { workspace = true, features = ["mount", "process", "signal", "user"] }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
sysctl = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[bench]]
name = "bfffs-bench"
path = "benches/bfffs-bench/mod.rs"
harness = false
